--- a/index.html
+++ b/index.html
@@ -8,21 +8,24 @@
     <link rel="stylesheet" href="/styles/styles.css">
 </head>
 <body>
-    <header class="heading">
-        <div class="heading__logo">
-            <img class="logo__img" src="/Img/worldwide-Traced.svg" alt="OptimusTech logo">
-            <p class="logo__name">OptimusTech</p>
-        </div>
-        <nav class="heading__nav">               
-            <a class="nav__link" href="#">Home</a>                
-            <a class="nav__link" href="#">Produtos</a>                
-            <a class="nav__link" href="#">Recursos</a>                
-            <a class="nav__link" href="#">Sobre nós</a>                           
-        </nav>
-        <nav class="heading__nav__btns">
-            <a class="nav__btn" href="#">Entrar</a>
-            <a class="nav__btn" href="#">Cadastrar</a>
-        </nav>        
+    <header class="header">
+        <nav class="header__nav">
+            <div class="header__nav--logo">
+                <a class="logo" href="/">
+                    <img class="logo__img" src="/Img/logo.svg" alt="OptimusTech logo">
+                </a>
+            </div>
+            <div class="header__nav--menu">               
+                <a class="nav__link" href="#">Home</a>                
+                <a class="nav__link" href="#">Produtos</a>                
+                <a class="nav__link" href="#">Recursos</a>                
+                <a class="nav__link" href="#">Sobre nós</a>                           
+            </div>
+            <div class="header__nav--btns">
+                <a class="nav__link" href="#">Entrar</a>
+                <a class="nav__btn" href="#">Cadastrar</a>
+            </div>      
+        </nav>  
     </header>
     <section class="about">
         <span class="about__text">Sobre nós</span>
