--- a/index.html
+++ b/index.html
@@ -28,13 +28,36 @@
         </nav>  
     </header>
     <main>
+        <!--about-->
         <section class="about">
             <span class="about__text">Sobre nós</span>
             <h1 class="about__title">Por que somos diferentes?</h1>
             <p class="about__paragraph">Nós focamos nos detalhes de tudo que fazemos. Tudo para ajudar as empresas de todo o mundo a se concentrarem naquilo que é realmente importante para elas.            
-            </p>
-            
+            </p>            
         </section>
+        <!--metrics-->
+        <div class="metrics-wrapper">
+            <section class="metrics">
+                <h2 class="metrics__title">400+</h2>
+                <h4 class="metrics__subtitle">Projetos concluídos</h3>
+                <p class="metrics__text">Nós ajudamos a construir mais de 400 projetos incríveis.</p>
+            </section>
+            <section class="metrics">
+                <h2 class="metrics__title">100+</h2>
+                <h4 class="metrics__subtitle">Colaboradores</h3>
+                <p class="metrics__text">Temos mais de 100 colaboradores no nosso time que se preocupam com nossos clientes.</p>
+            </section>
+            <section class="metrics">
+                <h2 class="metrics__title">20K</h2>
+                <h4 class="metrics__subtitle">Downloads</h3>
+                <p class="metrics__text">Nossos projetos que estão disponíveis em lojas já foram baixados mais de 20.000 vezes.</p>
+            </section>
+            <section class="metrics">
+                <h2 class="metrics__title">500+</h2>
+                <h4 class="metrics__subtitle">Reviews 5 estrelas</h3>
+                <p class="metrics__text">Estamos orgulhosos de contar com mais de 500 reviews 5 estrelas em nossos produtos.</p>
+            </section>
+        </div>
     </main>
     
 </body>
