--- a/index.html
+++ b/index.html
@@ -39,25 +39,31 @@
         <div class="metrics-wrapper">
             <section class="metrics">
                 <h2 class="metrics__title">400+</h2>
-                <h4 class="metrics__subtitle">Projetos concluídos</h3>
+                <h4 class="metrics__subtitle">Projetos concluídos</h4>
                 <p class="metrics__text">Nós ajudamos a construir mais de 400 projetos incríveis.</p>
             </section>
             <section class="metrics">
                 <h2 class="metrics__title">100+</h2>
-                <h4 class="metrics__subtitle">Colaboradores</h3>
+                <h4 class="metrics__subtitle">Colaboradores</h4>
                 <p class="metrics__text">Temos mais de 100 colaboradores no nosso time que se preocupam com nossos clientes.</p>
             </section>
             <section class="metrics">
                 <h2 class="metrics__title">20K</h2>
-                <h4 class="metrics__subtitle">Downloads</h3>
+                <h4 class="metrics__subtitle">Downloads</h4>
                 <p class="metrics__text">Nossos projetos que estão disponíveis em lojas já foram baixados mais de 20.000 vezes.</p>
             </section>
             <section class="metrics">
                 <h2 class="metrics__title">500+</h2>
-                <h4 class="metrics__subtitle">Reviews 5 estrelas</h3>
+                <h4 class="metrics__subtitle">Reviews 5 estrelas</h4>
                 <p class="metrics__text">Estamos orgulhosos de contar com mais de 500 reviews 5 estrelas em nossos produtos.</p>
             </section>
         </div>
+        <section class="careers">
+            <p class="careers__hiring">vagas abertas</p>
+            <h3 class="careers__title">Estamos procurando por talentos</h3>
+            <p class="careers__text">Somos uma equipe 100% remota com pessoas do Brasil inteiro.</p>
+            <img class="careers__img" src="Img/Image.png" alt="company team members on a meeting with their computers open">
+        </section>
     </main>
     
 </body>
