Create job area

--- a/index.html
+++ b/index.html
@@ -38,31 +38,80 @@
         <!--metrics-->
         <div class="metrics-wrapper">
             <section class="metrics">
-                <h2 class="metrics__title">400+</h2>
-                <h4 class="metrics__subtitle">Projetos concluídos</h4>
+                <strong class="metrics__title">400+</strong>
+                <h3 class="metrics__subtitle">Projetos concluídos</h3>
                 <p class="metrics__text">Nós ajudamos a construir mais de 400 projetos incríveis.</p>
             </section>
             <section class="metrics">
-                <h2 class="metrics__title">100+</h2>
-                <h4 class="metrics__subtitle">Colaboradores</h4>
+                <strong class="metrics__title">100+</strong>
+                <h3 class="metrics__subtitle">Colaboradores</h3>
                 <p class="metrics__text">Temos mais de 100 colaboradores no nosso time que se preocupam com nossos clientes.</p>
             </section>
             <section class="metrics">
-                <h2 class="metrics__title">20K</h2>
-                <h4 class="metrics__subtitle">Downloads</h4>
+                <strong class="metrics__title">20K</strong>
+                <h3 class="metrics__subtitle">Downloads</h3>
                 <p class="metrics__text">Nossos projetos que estão disponíveis em lojas já foram baixados mais de 20.000 vezes.</p>
             </section>
             <section class="metrics">
-                <h2 class="metrics__title">500+</h2>
-                <h4 class="metrics__subtitle">Reviews 5 estrelas</h4>
+                <strong class="metrics__title">500+</strong>
+                <h3 class="metrics__subtitle">Reviews 5 estrelas</h3>
                 <p class="metrics__text">Estamos orgulhosos de contar com mais de 500 reviews 5 estrelas em nossos produtos.</p>
             </section>
         </div>
+
         <section class="careers">
             <p class="careers__hiring">vagas abertas</p>
-            <h3 class="careers__title">Estamos procurando por talentos</h3>
+            <h2 class="careers__title">Estamos procurando por talentos</h2>
             <p class="careers__text">Somos uma equipe 100% remota com pessoas do Brasil inteiro.</p>
             <img class="careers__img" src="Img/Image.png" alt="company team members on a meeting with their computers open">
+        </section>
+        
+        <section class="jobs">
+            <div class="job-area">
+                <h3 class="job-area__title">Desing</h3>
+                <ul class="position">
+                   <li class="position__item">
+                        <h4 class="position__title">Product Designer</h4>
+                        <div class="position__info">
+                            <span>Full time</span>
+                            <span>Faixa salarial: R$7.000</span>
+                        </div>
+                    </li>
+                    <li class="position__item">
+                        <h4 class="position__title">UX Designer</h4>
+                        <div class="position__info">
+                            <span>Full time</span>
+                            <span>Faixa salarial: R$6.000</span>
+                        </div>
+                    </li>
+                </ul>
+            </div>
+            <div class="job-area">
+                <h3 class="job-area__title">Desenvolvimento de Software</h3>
+                <ul class="position">
+                   <li class="position__item">
+                        <h4 class="position__title">Desenvolvedor(a) iOS</h4>
+                        <div class="position__info">
+                            <span>Full time</span>
+                            <span>Faixa salarial: R$8.000</span>
+                        </div>
+                    </li>
+                    <li class="position__item">
+                        <h4 class="position__title">Desenvolvedor(a) Front-end</h4>
+                        <div class="position__info">
+                            <span>Full time</span>
+                            <span>Faixa salarial: R$7.000</span>
+                        </div>
+                    </li>
+                    <li class="position__item">
+                        <h4 class="position__title">Desenvolvedor(a) Back-end</h4>
+                        <div class="position__info">
+                            <span>Full time</span>
+                            <span>Faixa salarial: R$8.000</span>
+                        </div>
+                    </li>
+                </ul>
+            </div>
         </section>
     </main>
     
