Create section testimonials

--- a/index.html
+++ b/index.html
@@ -113,6 +113,16 @@
                 </ul>
             </div>
         </section>
+
+        <section class="testimonials">
+            <p class="testimonials__text">Veja o que nossos colaboradores falam sobre nós</p>
+            <strong class="testimonials__opinion">OptimusTech se importa com a saúde dos seus colaboradores e sempre procura nos dar todo tipo de auxílio possível.</strong>
+            <div>
+                <img class="testimonials__img" src="Img/team-member.png" alt="profile pictur of the testimonial writer">
+            </div>
+            <p class="testimonials__name">Júlia Castro</p>
+            <p class="testimonials__job">desenvolvedora web</p>
+        </section>
     </main>
     
 </body>
