--- a/index.html
+++ b/index.html
@@ -124,6 +124,15 @@
             <p class="testimonials__job">desenvolvedora web</p>
         </section>
     </main>
+    <footer class="contact">
+        <h2 class="contact__title">Acompanhe as nossas oportunidades</h2>
+        <p class="contact__text">Seja o primeiro a saber quando novas vagas serão abertas!</p>
+        <div class="contact__form">
+            <input class="contact__email" id="contact__email" type="email" placeholder="Seu e-mail">
+            <a class="contact__btn">Cadastrar</a>
+        </div>
+        <p class="contact__copyright">© 2022 OptimusTech. Todos os direitos reservados.</p>
+    </footer>
     
 </body>
 </html>
